# video_recorder_app

./: .env.example  CLAUDE.md  README.md  build_win.bat  pyproject.toml  recorder.spec  run_cli.py  run_gui.py
src/recorder/: capture.py  cli.py  engine.py  main.py  ui.py
